update server side acl and update can helper with Permissions object

--- a/client/appAdmin/templates/permissions/index.hbs
+++ b/client/appAdmin/templates/permissions/index.hbs
@@ -1,9 +1,14 @@
-<div class="actions">
+<h2>{{t 'admin.permissions.title'}}</h2>
+
+{{!-- <div class="actions">
   {{#link-to 'roles.create' classNames="btn btn-default"}}
     {{t 'admin.create.role'}}
   {{/link-to}}
 
-</div>
+  <a href="/api/v1/fetchActionPermissions?redirect=/admin#/permissions" class="btn">
+    {{t 'admin.permissions.fetchAll'}}
+  </a>
+</div> --}}
 
 <table class="table table-striped">
   <thead>
