--- a/client/appAdmin/templates/components/we-admin-menu.hbs
+++ b/client/appAdmin/templates/components/we-admin-menu.hbs
@@ -1,19 +1,24 @@
-{{!-- {{#each links}}
+<ul class="nav in" id="side-menu">
+  {{#each links}}
+    <li>
+      {{#link-to name}}
+        {{label}}
+      {{/link-to}}
+    </li>
+  {{/each}}
   <li>
-    {{#link-to name}}
-      {{label}}
-    {{/link-to}}
+    <a href="#">Tabelas<span class="fa arrow"></span></a>
+    <ul class="nav nav-second-level collapse" aria-expanded="false" style="height: 0px;">
+      {{#each modelLinks}}
+        <li>
+          {{#link-to 'model' model}}
+            {{text}}
+          {{/link-to}}
+        </li>
+      {{/each}}
+    </ul>
   </li>
-{{/each}}
-<li class="divider"></li> --}}
-{{!-- <li class="divider"></li>
-{{#each modelLinks}}
-  <li>
-    {{#link-to 'model' model}}
-      {{text}}
-    {{/link-to}}
-  </li>
-{{/each}} --}}
+</ul>
 {{!--
 <li class="divider"></li>
 <li>
