update we-menu component to add localization and submenu suport

--- a/client/appAdmin/templates/partials/sidebar.hbs
+++ b/client/appAdmin/templates/partials/sidebar.hbs
@@ -1,7 +1,7 @@
 
 {{!-- sidebar --}}
 <div class="navbar-default sidebar" role="navigation">
-  <div class="sidebar-nav navbar-collapse">
-    {{we-admin-menu}}
-  </div>
+	<div class="sidebar-nav navbar-collapse">
+		{{we-menu menuName="admin" classNames="nav-colapsable" enableMetisMenu=true}}
+	</div>
 </div>
