--- a/client/appAdmin/templates/permissions/index.hbs
+++ b/client/appAdmin/templates/permissions/index.hbs
@@ -1,6 +1,6 @@
 <h2>{{t 'admin.permissions.title'}}</h2>
 
-{{!-- <div class="actions">
+<div class="actions">
   {{#link-to 'roles.create' classNames="btn btn-default"}}
     {{t 'admin.create.role'}}
   {{/link-to}}
@@ -8,33 +8,35 @@
   <a href="/api/v1/fetchActionPermissions?redirect=/admin#/permissions" class="btn">
     {{t 'admin.permissions.fetchAll'}}
   </a>
-</div> --}}
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Permission</th>
-
-      {{#each roles}}
-        <th>{{name}}</th>
-      {{/each}}
-
-      <th>administrator</th>
-    </tr>
-  </thead>
-  <tbody>
-    {{#each permission in records}}
+</div>
+<br>
+{{#if records.isFulfilled}}
+  <table class="table table-striped table-bordered">
+    <thead>
       <tr>
-        <th scope="row">{{permission.name}}</th>
+        <th>Permission</th>
 
-      {{#each role in roles}}
-        {{we-role-permission-checkbox role=role permission=permission}}
-      {{/each}}
+        {{#each roles}}
+          <th>{{name}}</th>
+        {{/each}}
 
-      <td>
-        <input type="checkbox" disabled="true" checked="true">
-      </td>
+        <th>administrator</th>
       </tr>
-    {{/each}}
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      {{#each permission in records}}
+        <tr>
+          <th scope="row">{{permission.name}}</th>
+          {{#each role in roles}}
+            {{we-role-permission-checkbox role=role permission=permission}}
+          {{/each}}
+          <td>
+            <input type="checkbox" disabled="true" checked="true">
+          </td>
+        </tr>
+      {{/each}}
+    </tbody>
+  </table>
+{{else}}
+  <span class="glyphicon glyphicon-refresh"></span> ...
+{{/if}}
