update auth features, routes and tests

--- a/server/emails/AuthResetPasswordEmail/text.handlebars
+++ b/server/emails/AuthResetPasswordEmail/text.handlebars
@@ -1,10 +1,10 @@
-Hi <%= user.name %>,
+Hi {{user.name}},
 
-Someone (hopefully you) has requested a password reset for your <%= site.name %> account.  Follow the link below to set a new password:
+Someone (hopefully you) has requested a password reset for your {{site.name}} account.  Follow the link below to set a new password:
 
-Link: <%= resetPasswordUrl %>
+Link: {{resetPasswordUrl}}
 
 If you don't wish to reset your password, disregard this email and no action will be taken.
 
-- The <%= site.name %> Team
-- <%= site.url %>
+- The {{site.name}} Team
+- {{site.url}}
