update login, model converter and config loader

--- a/client/appAdmin/templates/vocabulary/create.hbs
+++ b/client/appAdmin/templates/vocabulary/create.hbs
@@ -1,3 +1,3 @@
-{{we-title title='admin.vocabulary.create'}}
+<h1 class="page-header">{{t 'vocabulary.button.create'}}</h1>
 
 {{partial 'partials/vocabulary-create-form'}}
