--- a/client/app/templates/auth/ForgotPassword.hbs
+++ b/client/app/templates/auth/ForgotPassword.hbs
@@ -1,7 +1,7 @@
 <h1>{{t 'Forgot Password form'}}</h1>
 <br>
 <div class="well">
-  <form {{action requestPasswordChange on="submit"}} action="/auth/forgot-password" method="post" class="form">
+  <form {{action 'requestPasswordChange' on="submit"}} action="/auth/forgot-password" method="post" class="form">
     <h4>{{t 'Enter you e-mail address to request a password change.'}}</h4>
     <br>
 
@@ -16,7 +16,7 @@
       <div class="input-group text-center">
       {{input name="email" value=email  type="email" placeholder=emailPlaceholder classNames="form-control input-lg" required="true"}}
         <span class="input-group-btn">
-          <button {{action requestPasswordChange}} class="btn btn-lg btn-primary" type="button">{{t 'Send email'}}</button>
+          <button {{action 'requestPasswordChange'}} class="btn btn-lg btn-primary" type="button">{{t 'Send email'}}</button>
         </span>
       </div>
 
