--- a/client/appAdmin/templates/partials/vocabulary-create-form.hbs
+++ b/client/appAdmin/templates/partials/vocabulary-create-form.hbs
@@ -3,16 +3,16 @@
 
   <div class="form-group">
     <label>{{t 'vocabulary.field.name.label'}}</label>
-    {{input name="name" value=model.vocabulary.name type="text" placeholder="vocabulary.field.name.placeholder" required="true" classNames="form-control"}}
+    {{input name="name" value=model.vocabulary.name type="text" placeholderTranslation="vocabulary.field.name.placeholder" required="true" classNames="form-control"}}
 
     <p class="help-block">{{t 'vocabulary.field.name.description'}}</p>
   </div>
 
-  <div class="form-group">
+{{!--   <div class="form-group">
     <label>{{t 'vocabulary.field.uniqueName.label'}}</label>
-    {{input name="uniqueName" value=model.vocabulary.uniqueName type="text" placeholder="vocabulary.field.uniqueName.placeholder" required="true" classNames="form-control"}}
+    {{input name="uniqueName" value=model.vocabulary.uniqueName type="text" placeholderTranslation="vocabulary.field.uniqueName.placeholder" required="true" classNames="form-control"}}
     <p class="help-block">{{t 'vocabulary.field.uniqueName.description'}}</p>
-  </div>
+  </div> --}}
 
   <div class="form-group">
     <label>{{t 'vocabulary.field.description.label'}}</label>
@@ -20,7 +20,7 @@
     <p class="help-block">{{t 'vocabulary.field.description.description'}}</p>
   </div>
 
-  <button {{action "create"}} type="submit" class="btn btn-primary">{{t 'Create'}}</button>
+  <button {{action "create"}} type="submit" class="btn btn-primary">{{t 'create'}}</button>
 
   {{#link-to 'vocabularies' classNames="btn btn-default"}}
     {{t 'Cancel'}}
