--- a/client/appAdmin/templates/vocabularies.hbs
+++ b/client/appAdmin/templates/vocabularies.hbs
@@ -1,4 +1,4 @@
-{{we-title title='admin.vocabularies.title'}}
+<h2>{{t 'admin.vocabularies.title'}}</h2>
 
 <div class='row'>
   <div class='col-md-12'>
