--- a/client/appAdmin/templates/partials/footer.hbs
+++ b/client/appAdmin/templates/partials/footer.hbs
@@ -2,14 +2,13 @@
 <div class="footer" id="footer">
   <div class="row">
     <div class="col-sm-6">
-      <a href="https://github.com/wejs">Github</a> <small class="text-muted">|</small> <a href="https://wejs.org">Site</a>
+      <a href="https://github.com/wejs" target="_blank">Github</a> <small class="text-muted">|</small> <a href="https://wejs.org" target="_blank">Site</a>
     </div>
     <div class="col-sm-6">
       <p>
       <span class="pull-right">
-        <a href="#" >WE License MIT 2013</a> | Theme
-        <a href="https://github.com/IronSummitMedia/startbootstrap/tree/gh-pages/templates/sb-admin">SB Admin</a>
-        from <a href="http://startbootstrap.com/" target="ext">startbootstrap.com</a>
+         Theme
+        <a href="https://github.com/IronSummitMedia/startbootstrap/tree/gh-pages/templates/sb-admin" target="_blank">SB Admin</a>
       </span>
       </p>
     </div>
@@ -18,5 +17,5 @@
 
 <hr>
 <h4 class="text-center">
-<a href="https://github.com/wejs/we" target="ext">We.js</a> | <a href="http://sailsjs.org">Sails.js</a> | <a href="http://emberjs.com/">Ember.js</a>
+  <a href="https://github.com/wejs/we" target="ext">We.js</a>
 </h4>
