--- a/client/appAdmin/templates/partials/navbar.hbs
+++ b/client/appAdmin/templates/partials/navbar.hbs
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#/">Admin</a>
+      <a class="navbar-brand" href="/admin">
+        <img {{bind-attr src=configs.appLogo}} width="25px" />
+        {{configs.appName}} | Admin</a>
     </div>
 
 		<ul class="nav navbar-top-links navbar-right">
@@ -8,7 +10,7 @@
 		    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-user"></i> {{currentUser.displayName}} <b class="caret"></b></a>
 		    <ul class="dropdown-menu">
 		      <li>
-		          <a href="/"><i class="fa fa-fw fa-desktop"></i> CdP</a>
+		          <a href="/"><i class="fa fa-fw fa-desktop"></i> Home / app</a>
 		      </li>
 		      <li class="divider"></li>
 		      <li>
