--- a/client/app/templates/page/form.hbs
+++ b/client/app/templates/page/form.hbs
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="post-heading">
-          <h1>{{focus-input value=record.title placeholder="Write the title here" classNames="form-control input-lg header-inputs"}}</h1>
+          <h1>{{focus-input value=record.title placeholderTranslation="page.form.title.label" classNames="form-control input-lg header-inputs"}}</h1>
           <h2 class="subheading">
             <label for="about">{{t 'page.form.about.label'}}</label>
             {{we-editor value=record.about style="small" classNames="header-inputs"}}
