--- a/client/appAdmin/templates/pages/create.hbs
+++ b/client/appAdmin/templates/pages/create.hbs
@@ -1,55 +1,1 @@
-<form {{action "createRecord" on="submit"}} >
-  <div class="form-group">
-    <div class="input-group">
-      <label class="input-group-addon">Title</label>
-      {{input name="title" value=record.title classNames="form-control"}}
-    </div>
-  </div>
-
-  <div class="form-group">
-    <div class="input-group">
-      <label class="input-group-addon">URL</label>
-      {{input name="url" value=record.url classNames="form-control"}}
-    </div>
-  </div>
-
-  <div class="form-group">
-    <div class="input-group">
-      <label class="input-group-addon">Type</label>
-      {{view "select" name="type" classNames="form-control"
-        value=record.type
-        content=typeOptions
-        optionValuePath="content.value"
-        optionLabelPath="content.label"}}
-    </div>
-  </div>
-
-  <div class="form-group">
-    <div class="input-group">
-      <label class="input-group-addon">Layout</label>
-      {{view "select" name="layout" classNames="form-control"
-        selection=record.layout
-        content=layouts
-        prompt='select one layout'
-        optionValuePath="content.id"
-        optionLabelPath="content.name"}}
-    </div>
-  </div>
-
-  {{#if showModelSelector}}
-    <div class="form-group">
-      <div class="input-group">
-        <label class="input-group-addon">Model name</label>
-        {{view "select" name="modelName" classNames="form-control"
-          value=record.modelName
-          content=modelNameOptions.responseJSON}}
-      </div>
-    </div>
-  {{/if}}
-
-  <div class="form-group">
-    <div class="input-group">
-      <button class="btn btn-primary" type="submit" {{action "createRecord"}}>{{t 'create'}}</button>
-    </div>
-  <div>
-</form>
+{{render 'page.form' model}}
