--- a/client/appAdmin/templates/pages/index.hbs
+++ b/client/appAdmin/templates/pages/index.hbs
@@ -1,25 +1,42 @@
+<h1 class="page-header">{{t 'pages.title'}}</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>
-        ID
-      </th>
-      <th>
-        Title
-      </th>
-    </tr>
-  </thead>
-{{#each records}}
-  <tbody>
-    <tr>
-      <td>
-        {{#link-to 'page' id}}
-          {{id}} - {{title}}
-        {{/link-to}}
-      </td>
-    </tr>
-  </tbody>
-{{/each}}
-
-</table>
+<div class="row">
+  <div class="col-md-12">
+    {{#link-to 'pages.create' classNames="btn btn-default"}}
+      <span class="text-primary glyphicon glyphicon-plus"></span> {{t 'page.create'}}
+    {{/link-to}}
+  </div>
+</div>
+<br>
+<div class="table-responsive">
+  <table class="table table-bordered table-hover table-striped">
+    <thead>
+      <tr>
+        <th>id</th>
+        <th>Title</th>
+      <th>Created at</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each record in records}}
+        <tr>
+          <td>
+            {{#link-to 'page' record.id}}
+              {{record.id}}
+            {{/link-to}}
+          </td>
+          <td>
+            {{#link-to 'page' record.id}}
+              {{record.title}}
+            {{/link-to}}
+          </td>
+          <td>
+           {{date record.createdAt}}
+          </td>
+        </tr>
+      {{else}}
+        {{t 'pages.empty'}}
+      {{/each}}
+    </tbody>
+  </table>
+</div>
