--- a/client/app/templates/components/we-terms.hbs
+++ b/client/app/templates/components/we-terms.hbs
@@ -1,4 +1,4 @@
-{{#each terms}}
+{{#each term in terms}}
   {{#if _view.contentIndex}} , {{/if}}
-  <a>{{render 'term/item' this}}</a>
+  <a>{{term}}</a>
 {{/each}}
