--- a/client/app/templates/page/form.hbs
+++ b/client/app/templates/page/form.hbs
@@ -43,13 +43,13 @@
           <div class="form-group">
             <div class="post-edit-category">
               <label for="category">{{t 'page.form.category.label'}}</label>
-              {{we-category-field value=record.category newTagMark=' (nova)' maximumSelectionSize='4'}}
+              {{we-category-field value=record.categories newTagMark=' (nova)' maximumSelectionSize='4' modelName='Page' field='categories'}}
             </div>
           </div>
 
           <div class="form-group">
             <label for="tag">{{t 'page.form.tag.label'}}</label>
-            {{we-tag-field value=record.tag newTagMark=' (nova)' maximumSelectionSize='5'}}
+            {{we-tag-field value=record.tags newTagMark=' (nova)' maximumSelectionSize='5' modelName='Page' field='tags'}}
           </div>
 
           <hr>
