--- a/client/appAdmin/templates/page/form.hbs
+++ b/client/appAdmin/templates/page/form.hbs
@@ -33,13 +33,13 @@
   <div class="form-group">
     <div class="post-edit-category">
       <label for="category">{{t 'page.form.category.label'}}</label>
-      {{we-category-field value=record.category newTagMark=' (nova)' maximumSelectionSize='4'}}
+      {{we-category-field value=record.categories newTagMark=' (nova)' maximumSelectionSize='4' modelName='Page' field='categories'}}
     </div>
   </div>
 
   <div class="form-group">
     <label for="tag">{{t 'page.form.tag.label'}}</label>
-    {{we-tag-field value=record.tag newTagMark=' (nova)' maximumSelectionSize='5'}}
+    {{we-tag-field value=record.tags newTagMark=' (nova)' maximumSelectionSize='5'  modelName='Page' field='tags'}}
   </div>
 
   <hr>
@@ -55,7 +55,11 @@
 
   <div class="form-group">
     <div class="input-group">
-      <button class="btn btn-primary" type="submit" {{action "createRecord"}}>{{t 'create'}}</button>
+      {{#if record.id}}
+        <button class="btn btn-primary" type="submit" {{action "saveRecord"}}>{{t 'save'}}</button>
+      {{else}}
+        <button class="btn btn-primary" type="submit" {{action "createRecord"}}>{{t 'create'}}</button>
+      {{/if}}
     </div>
   <div>
 </form>
