update page feature and add sidebar menu

--- a/client/app/templates/page/form.hbs
+++ b/client/app/templates/page/form.hbs
@@ -1,6 +1,6 @@
 <!-- Page Header -->
 <!-- Set your background image for this header on the line below. -->
-<header class="intro-header" {{bind-attr style=headerImage }}>
+<header class="intro-header">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
