--- a/client/app/templates/page/index.hbs
+++ b/client/app/templates/page/index.hbs
@@ -1,80 +1,57 @@
-<!-- Page Header -->
-<!-- Set your background image for this header on the line below. -->
-<header class="intro-header" {{bind-attr style=blogBgImageStyle}}>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <div class="post-heading">
-          <h1>{{record.title}}</h1>
-          <h2 class="subheading">{{html record.about}}</h2>
-          <span class="meta">{{t 'page.created.by'}}
-            {{#link-to 'user' record.creator.id}}
-              {{record.creator.displayName}}</a>
-            {{/link-to}}
-             - {{date record.createdAt}}
-          </span>
+<article class="bs-docs-section">
+  <span class="meta">{{t 'page.created.by'}}
+    {{#link-to 'user' record.creator.id}}
+      {{record.creator.displayName}}</a>
+    {{/link-to}}
+     - {{date record.createdAt}}
+  </span>
+
+  <div class="article-body">
+    {{#if record.id}}
+      {{#can 'page_update' 'page' 'record'}}
+        {{#link-to 'page.edit' record.id classNames="btn btn-primary"}}
+          Edit
+        {{/link-to}}
+      {{/can}}
+
+      {{#can 'page_delete' 'page' 'record'}}
+        <button {{action 'deleteRecord' record.id}} class="btn btn-default">
+          Delete
+        </button>
+      {{/can}}
+    {{/if}}
+
+    <div class="page-body">
+      {{html record.body}}
+    </div>
+
+    {{!-- terms --}}
+    <div class="record-terms">
+      {{#if record.categories}}
+        <div class="record-category">
+          <label>{{t 'page.form.category.label'}}</label>
+          {{we-terms terms=record.categories}}
         </div>
-      </div>
+      {{/if}}
+
+      {{#if record.tags}}
+        <div class="record-tag">
+          <label>{{t 'page.form.tag.label'}}</label>
+          {{we-terms terms=record.tags}}
+        </div>
+      {{/if}}
+    </div>
+    {{!-- /terms --}}
+
+    <hr>
+    <div class="comment-area">
+      <a data-link-area="comments" id="anchor-comments"></a>
+      <h3 class="comment-title">{{t 'comments.title'}}</h3>
+
+      {{we-comments commentedModelName="page" commentedModelId=record.id}}
+
+      {{we-comment-form commentedModelName="page" commentedModelId=record.id}}
     </div>
   </div>
-</header>
-  <!-- Post Content -->
-  <page>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          {{#if record.id}}
-            {{#can 'page_update' 'page' 'record'}}
-              {{#link-to 'page.edit' record.id classNames="btn btn-primary"}}
-                Edit
-              {{/link-to}}
-            {{/can}}
 
-            {{#can 'page_delete' 'page' 'record'}}
-              <button {{action 'deleteRecord' record.id}} class="btn btn-default">
-                Delete
-              </button>
-            {{/can}}
-
-          {{/if}}
-        </div>
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <div class="page-body">
-            {{html record.body}}
-          </div>
-
-          {{!-- terms --}}
-          <div class="record-terms">
-            {{#if record.category}}
-              <div class="record-category">
-                <label>{{t 'page.form.category.label'}}</label>
-                {{we-terms terms=record.category}}
-              </div>
-            {{/if}}
-
-            {{#if record.tag}}
-              <div class="record-tag">
-                <label>{{t 'page.form.tag.label'}}</label>
-                {{we-terms terms=record.tag}}
-              </div>
-            {{/if}}
-          </div>
-          {{!-- /terms --}}
-
-        </div>
-
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <hr>
-          <div class="comment-area">
-            <a data-link-area="comments" id="anchor-comments"></a>
-            <h3 class="comment-title">{{t 'comments.title'}}</h3>
-
-            {{we-comments commentedModelName="page" commentedModelId=record.id}}
-
-            {{we-comment-form commentedModelName="page" commentedModelId=record.id}}
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </page>
+</artlcle>
