update groups list and membership

--- a/client/app/templates/components/we-timeline-loading.hbs
+++ b/client/app/templates/components/we-timeline-loading.hbs
@@ -1,6 +1,6 @@
 <div class="loading-more-content text-center">
   {{#if loadingMore}}
-    {{t 'Loading more'}}... <img src="/core/images/loading.gif">
+    {{t 'Loading more'}}... <img src="/public/plugin/we-core/files/images/loading.gif">
   {{else}}
     {{#if haveMore}}
       <a href='#' {{action 'getMore'}}>{{t 'Get More'}}</a>
