--- a/client/app/templates/group/teaser.hbs
+++ b/client/app/templates/group/teaser.hbs
@@ -1,4 +1,3 @@
-<div class="col-md-3">
 <div class="group group-teaser teaser panel panel-default text-center">
   <div class="header panel-heading">
     <h4>
@@ -10,14 +9,14 @@
   <div class="content panel-body">
     {{#link-to 'group' id}}
       {{#if logo}}
-        <img width="100%" {{bind-attr src="logo.urls.large"}} />
+        <img width="100%" {{bind-attr src="logo.urls.thumbnail"}} />
       {{else}}
         <img width="100%" src="/public/plugin/we-core/files/images/logos/group.jpg">
       {{/if}}
     {{/link-to}}
   </div>
   <div class="footer panel-footer">
-    <span>10</span> <span>15</span>
+    <span><i class="glyphicon glyphicon-user"></i>{{data.meta.membersCount}} {{t 'group.members'}}</span> -
+    <span><i class="glyphicon glyphicon-file"></i>{{data.meta.contentsCount}} {{t 'group.contents'}}</span>
   </div>
-</div>
 </div>
