--- a/client/app/templates/components/we-timeline-loading.hbs
+++ b/client/app/templates/components/we-timeline-loading.hbs
@@ -1,11 +1,11 @@
 <div class="loading-more-content text-center">
   {{#if loadingMore}}
-    {{t 'Loading more'}}... <img src="/public/plugin/we-core/files/images/loading.gif">
+    {{t 'loading.more'}}... <img src="/public/plugin/we-core/files/images/loading.gif">
   {{else}}
     {{#if haveMore}}
-      <a href='#' {{action 'getMore'}}>{{t 'Get More'}}</a>
+      <a href='javascript:;' {{action 'getMore'}}>{{t 'get.more'}}</a>
     {{else}}
-      {{t 'No more content'}}
+      {{t 'no.more.content'}}
     {{/if}}
   {{/if}}
 </div>
