--- a/client/app/templates/components/we-activity-group-update.hbs
+++ b/client/app/templates/components/we-activity-group-update.hbs
@@ -1,5 +1,5 @@
 <div class="activity-text">
 {{#link-to 'group' record.id}} {{record.name}} {{/link-to}}
-{{t 'created.by'}}
+{{t 'updated.by'}}
 {{#link-to 'user' record.id}}{{record.creator.displayName}}{{/link-to}}
 </div>
