--- a/client/app/templates/groups/index.hbs
+++ b/client/app/templates/groups/index.hbs
@@ -11,5 +11,5 @@
 </div>
 <div class="container bs-docs-container">
   {{we-user-membership-list widgetTitle="currentUser.groups" memberId=currentUser.id}}
-  {{we-group-list}}
+  {{we-group-list memberId=currentUser.id}}
 </div>
