update activity template to set activity and load actor

--- a/client/app/templates/components/we-activity-group-update.hbs
+++ b/client/app/templates/components/we-activity-group-update.hbs
@@ -1,5 +1,5 @@
 <div class="activity-text">
-{{#link-to 'group' record.id}} {{record.name}} {{/link-to}}
+{{#link-to 'group' activity.relatedRecord.id}} {{activity.relatedRecord.name}} {{/link-to}}
 {{t 'updated.by'}}
-{{#link-to 'user' record.id}}{{record.creator.displayName}}{{/link-to}}
+{{#link-to 'user' activity.relatedActor.id}}{{activity.relatedActor.displayName}}{{/link-to}}
 </div>
