fix new activity push

--- a/client/app/templates/activity/list.hbs
+++ b/client/app/templates/activity/list.hbs
@@ -1,5 +1,5 @@
 <div id="activities" class="activities">
-  {{#each}}
+  {{#each controller}}
     {{we-activity-item activity=this}}
   {{else}}
     {{#unless activityIsLoading}}
