update user avatar size

--- a/client/app/templates/post/teaser.hbs
+++ b/client/app/templates/post/teaser.hbs
@@ -3,7 +3,7 @@
   <div class="header panel-heading">
     <span class="creator">
       {{#link-to 'user' creator.id}}
-        <span class="creator-avatar avatar-small">{{user-avatar user=creator}}</span>
+        <span class="creator-avatar avatar-small">{{user-avatar user=creator width="35px"}}</span>
         <span class="creator-name">{{creator.displayName}}</span>
       {{/link-to}}
     </span>
