--- a/client/app/templates/group.hbs
+++ b/client/app/templates/group.hbs
@@ -33,7 +33,7 @@
         <div class="widget-content">
           <ul class="nav nav-pills nav-justified">
             <li>
-              {{we-group-join-button tagName="a" status=membership.status action="changeMembership" disabled=group.isCreator classNames="btn btn-primary"}}
+              {{we-group-join-button tagName="a" group=group classNames="btn btn-primary"}}
             </li>
           </ul>
         </div>
