--- a/client/app/templates/group.hbs
+++ b/client/app/templates/group.hbs
@@ -31,11 +31,7 @@
 
       <div class="widget widget-type-menu">
         <div class="widget-content">
-          <ul class="nav nav-pills nav-justified">
-            <li>
-              {{we-group-join-button tagName="a" group=group classNames="btn btn-primary"}}
-            </li>
-          </ul>
+          {{we-group-join-button tagName="a" group=group classNames="btn btn-primary btn-block"}}
         </div>
       </div>
 
