remove shadownroutes and update acl feature

--- a/client/appAdmin/templates/components/we-role-permission-checkbox.hbs
+++ b/client/appAdmin/templates/components/we-role-permission-checkbox.hbs
@@ -1,5 +1,5 @@
 {{#if isSaving}}
-  <img width="22px" src="/core/images/loading.gif">
+  <img width="22px" src="/public/plugin/we-core/files/images/loading.gif">
 {{else}}
   {{input type="checkbox" checked=hasPermission}}
 {{/if}}
