--- a/client/appAdmin/templates/permissions/index.hbs
+++ b/client/appAdmin/templates/permissions/index.hbs
@@ -4,13 +4,9 @@
   {{#link-to 'roles.create' classNames="btn btn-default"}}
     {{t 'admin.create.role'}}
   {{/link-to}}
-
-  <a href="/api/v1/fetchActionPermissions?redirect=/admin#/permissions" class="btn">
-    {{t 'admin.permissions.fetchAll'}}
-  </a>
 </div>
 <br>
-{{#if records.isFulfilled}}
+{{#if records}}
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
@@ -26,9 +22,11 @@
     <tbody>
       {{#each permission in records}}
         <tr>
-          <th scope="row">{{permission.name}}</th>
+          <td scope="row"><strong>{{permission.title}}</strong> <small>({{permission.name}})</small></td>
           {{#each role in roles}}
-            {{we-role-permission-checkbox role=role permission=permission}}
+            <td>
+              {{we-role-permission-checkbox role=role permissionName=permission.name}}
+            </td>
           {{/each}}
           <td>
             <input type="checkbox" disabled="true" checked="true">
