--- a/client/app/templates/components/we-user-membership-list.hbs
+++ b/client/app/templates/components/we-user-membership-list.hbs
@@ -7,22 +7,23 @@
       <div class="col-md-12">{{we-loading isLoading=isLoading}}</div>
     {{else}}
       {{#each records}}
-        {{#if group.name}}
+
+        {{#if model.name}}
           <div class="col-md-3">
             <div class="group group-teaser teaser panel panel-default text-center">
               <div class="panel-content">
-                {{#link-to 'group' group.id title=group.name}}
-                  {{#if group.logo}}
-                    <img width="40px" {{bind-attr src="group.logo.urls.thumbnail"}} />
+                {{#link-to 'group' model.id title=model.name}}
+                  {{#if model.logo}}
+                    <img width="40px" {{bind-attr src="model.logo.urls.thumbnail"}} />
                   {{else}}
                     <img width="40px" src="/public/plugin/we-core/files/images/logos/group.jpg">
                   {{/if}}
-                  {{substr group.name max=25}}
+                  {{substr model.name max=25}}
                 {{/link-to}}
               </div>
               <div class="panel-footer">
-                <span><i class="glyphicon glyphicon-user"></i>{{group.data.meta.membersCount}} {{t 'group.members'}}</span> -
-                <span><i class="glyphicon glyphicon-file"></i>{{group.data.meta.contentsCount}} {{t 'group.contents'}}</span>
+                <span><i class="glyphicon glyphicon-user"></i>{{model.data.meta.membersCount}} {{t 'group.members'}}</span> -
+                <span><i class="glyphicon glyphicon-file"></i>{{model.data.meta.contentsCount}} {{t 'group.contents'}}</span>
               </div>
             </div>
           </div>
