--- a/client/app/templates/group/addMember.hbs
+++ b/client/app/templates/group/addMember.hbs
@@ -1,53 +1,36 @@
 <h2>{{t "group.invite.title"}}</h2>
 
-<h4>{{t "group.invite.form.title"}}</h4>
-{{#if isLoading}}
-  Enviando ...
-{{else}}
-  <form role="form" {{action "invite" on="submit"}}>
-    <div class="form-group">
-      <label>{{t 'group.invite.form.user.email'}}</label>
-      {{input name="email" value=newInvite.email type="email" required="true" classNames="form-control"}}
-    </div>
+{{#if showInviteForm}}
+  <h4>{{t "group.invite.form.title"}}</h4>
+  {{#if isLoading}}
+    Enviando ...
+  {{else}}
+    <form role="form" {{action "invite" on="submit"}}>
+      <div class="form-group">
+        <label>{{t 'group.invite.form.user.email'}}</label>
+        {{input name="email" value=newInvite.email type="email" required="true" classNames="form-control"}}
+      </div>
 
-    <div class="form-group">
-      <label>{{t 'group.invite.form.user.name'}}</label>
-      {{input name="name" value=newInvite.name type="text" required="true" classNames="form-control"}}
-    </div>
+      <div class="form-group">
+        <label>{{t 'group.invite.form.user.name'}}</label>
+        {{input name="name" value=newInvite.name type="text" required="true" classNames="form-control"}}
+      </div>
 
-    <div class="form-group">
-      <label>{{t 'group.invite.form.text'}}</label>
-      {{we-editor value=newInvite.text style="small"}}
-    </div>
+      <div class="form-group">
+        <label>{{t 'group.invite.form.text'}}</label>
+        {{we-editor value=newInvite.text style="small"}}
+      </div>
 
-    <div class="form-group">
+      <div class="form-group">
         <button class="btn btn-primary" type="submit">{{t "group.invite.form.submit"}}</button>
-    </div>
-  </form>
+        <button {{action "cancelInvite"}} class="btn btn-default">{{t 'group.invite.form.cancel'}}</button>
+      </div>
+    </form>
+  {{/if}}
+{{else}}
+  <button {{action "showInvite"}} class="btn btn-default">{{t 'group.invite.form.show'}}</button>
 {{/if}}
 
 <h4>{{t "group.invite.list.title"}}</h4>
 
 {{we-group-invite-list groupId=group.id}}
-
-{{!-- {{#if user}}
-  <div class="text-center">
-    <span class="avatar-large">{{we-avatar userId=user.id size="medium"}}</span>
-    <h3>{{user.displayName}}</h3>
-    <p>{{user.bio}}</p>
-    <button {{action "inviteUser"}} class="btn btn-primary addMember" type="button" data-loading-text="Processando...">Adicionar</button>
-  </div>
-{{else}}
-  {{#if notFound}}
-  <div class="alert alert-warning text-center" role="alert">
-    <strong>Nenhum usuário encontrado!</strong>
-  </div>
-  {{/if}}
-{{/if}}
-
-{{#if success}}
-<div class="alert alert-success text-center" role="alert">
-  Convite enviado com sucesso!
-</div>
-{{/if}}
- --}}
