update client side ACL and server owner permission

--- a/client/app/templates/components/we-comment-form.hbs
+++ b/client/app/templates/components/we-comment-form.hbs
@@ -1,4 +1,4 @@
-{{#can 'comment_create'}}
+{{#can 'create_comment'}}
   <div class="comment-form">
     <div class="user-avatar-area pull-left">
       <span class="creator-avatar avatar-small">
