--- a/client/app/templates/user.hbs
+++ b/client/app/templates/user.hbs
@@ -1,4 +1,4 @@
-{{#can 'user_update' 'user' 'user'}}
+{{#can 'update_user' 'user' 'user'}}
   <div class="user-admin-actions-area well">
     <div class="actions">
       <span class="actions-title">{{t 'Actions'}}: </span>
