--- a/client/app/templates/comment/item.hbs
+++ b/client/app/templates/comment/item.hbs
@@ -31,13 +31,13 @@
 
     {{#unless isEditing}}
       <div class="actions">
-        {{#can 'comment_update' 'comment' 'model'}}
+        {{#can 'update_comment' 'comment' 'model'}}
           <button type="button" class="btn btn-xs btn-default" {{action 'edit'}}>
             <span class="glyphicon glyphicon-edit text-primary"></span> {{t "Edit"}}
           </button>
         {{/can}}
 
-        {{#can 'comment_destroy' 'comment' 'model'}}
+        {{#can 'delete_comment' 'comment' 'model'}}
           <button class="btn btn-xs btn-default" {{action 'deleteComment' content}}>
             <span class="glyphicon glyphicon-remove text-danger"></span> {{t "Delete"}}
           </button>
