--- a/client/app/templates/post.hbs
+++ b/client/app/templates/post.hbs
@@ -102,13 +102,13 @@
 
             {{we-follow model='post' modelId=id flagText="Seguir"}}
 
-            {{#can editPost content=this}}
+            {{#can 'update_post' 'post' 'model'}}
               <button type="button" class="btn btn-xs btn-default" {{action 'edit'}}>
                 <span class="glyphicon glyphicon-edit text-primary"></span> {{t 'Edit'}}
               </button>
             {{/can}}
 
-            {{#can deletePost content=this}}
+            {{#can 'delete_post' 'post' 'model'}}
               <button class="btn btn-xs btn-default" {{action 'deleteItem'}}>
                 <span class="glyphicon glyphicon-remove text-danger"></span> {{t 'Delete'}}
               </button>
