--- a/client/app/templates/post/teaser.hbs
+++ b/client/app/templates/post/teaser.hbs
@@ -101,13 +101,13 @@
 
             {{we-follow model='post' modelId=id flagText="Seguir"}}
 
-            {{#can 'post_update' 'post' 'model'}}
+            {{#can 'update_post' 'post' 'model'}}
               <button type="button" class="btn btn-xs btn-default" {{action 'edit'}}>
                 <span class="glyphicon glyphicon-edit text-primary"></span> {{t 'Edit'}}
               </button>
             {{/can}}
 
-            {{#can 'post_destroy' 'post' 'model'}}
+            {{#can 'delete_post' 'post' 'model'}}
               <button class="btn btn-xs btn-default" {{action 'deleteItem'}}>
                 <span class="glyphicon glyphicon-remove text-danger"></span> {{t 'Delete'}}
               </button>
