--- a/client/app/templates/user/teaser.hbs
+++ b/client/app/templates/user/teaser.hbs
@@ -9,7 +9,7 @@
   </div>
   <div class="content panel-body">
     {{#link-to 'user' id}}
-      <span class="avatar-large">{{we-avatar userId=id size="medium"}}</span>
+      <span class="avatar-large">{{user-avatar user=this size="medium"}}</span>
     {{/link-to}}
   </div>
   <div class="footer panel-footer">
