--- a/files/public/css/app.css
+++ b/files/public/css/app.css
@@ -799,8 +799,8 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot?v=4.3.0');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.3.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.3.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.3.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.3.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
+  src: url('/public/plugin/we-core/files/fonts/fontawesome-webfont.eot?v=4.3.0');
+  src: url('/public/plugin/we-core/files/fonts/fontawesome-webfont.eot?#iefix&v=4.3.0') format('embedded-opentype'), url('/public/plugin/we-core/files/fonts/fontawesome-webfont.woff2?v=4.3.0') format('woff2'), url('/public/plugin/we-core/files/fonts/fontawesome-webfont.woff?v=4.3.0') format('woff'), url('/public/plugin/we-core/files/fonts/fontawesome-webfont.ttf?v=4.3.0') format('truetype'), url('/public/plugin/we-core/files/fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
