update dynamic layout feature

--- a/server/templates/region.hbs
+++ b/server/templates/region.hbs
@@ -1,1 +1,1 @@
-<we-region id="{{data.name}}" class="{{data.attrs.class}}">{{{data.widgets}}}</we-region>
+<we-region id="{{name}}" class="{{attrs.class}}">{{{widgets}}}</we-region>
