--- a/server/widgets/html/form.hbs
+++ b/server/widgets/html/form.hbs
@@ -1,1 +1,32 @@
-form.hbs
+<form name="widget-form-{{type}}">
+  <div class="form-group">
+    <label for="widget-form-{{type}}-title">Title</label>
+    <input name="title" value="{{title}}" type="text" class="form-control" id="widget-form-{{type}}-title" placeholder="Widget title">
+  </div>
+  <div class="form-group">
+    <label for="widget-form-{{type}}-html">HTML</label>
+    <textarea rows="10" name="html" class="form-control" id="widget-form-{{type}}-html">{{configuration.html}}</textarea>
+  </div>
+{{log this.regions}}
+  <div class="form-group">
+    <label for="widget-form-{{type}}-regionName">Region</label>
+    <select name="regionName" id="widget-form-{{type}}-regionName" class="form-control">
+      {{#each regions}}
+        <option value="{{@key}}" {{#if selected}}selected{{/if}}> {{this.name}}</option>
+      {{/each}}
+    </select>
+  </div>
+
+  <input type="hidden" name="type" value="{{type}}">
+  <input type="hidden" name="layout" value="{{this.layout}}">
+  <input type="hidden" name="theme" value="{{theme}}">
+
+  {{#if id}}
+    <input type="hidden" name="id" value="{{id}}">
+    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" data-dismiss="modal" class="btn btn-default">Cancel</button>
+  {{else}}
+    <button type="submit" class="btn btn-primary">Add</button>
+    <button type="submit" data-dismiss="modal" class="btn btn-default">Cancel</button>
+  {{/if}}
+</form>
