--- a/server/widgets/html/view.hbs
+++ b/server/widgets/html/view.hbs
@@ -1,1 +1,1 @@
-{{#widget-wrapper this}}{{{configuration.html}}}{{/widget-wrapper}}
+{{#widget-wrapper this}}<bind-html model-widget-{{id}}="configuration.html">{{{configuration.html}}}</bind-html>{{/widget-wrapper}}
