add widget view middleware and widget mennu

--- a/server/widgets/html/view.hbs
+++ b/server/widgets/html/view.hbs
@@ -1,1 +1,1 @@
-{{#widget-wrapper this}}<bind-html model-widget-{{id}}="configuration.html">{{{configuration.html}}}</bind-html>{{/widget-wrapper}}
+{{#widget-wrapper widget}}<bind-html model-widget-{{widget.id}}="configuration.html">{{{widget.configuration.html}}}</bind-html>{{/widget-wrapper}}
